Alterando botao de Deslogar para SVG e começando a tela de biblioteca

--- a/public/bobia.html
+++ b/public/bobia.html
@@ -25,6 +25,9 @@
       </a>
       <ul class="navbar">
         <li>
+          <a href="biblioteca.html">Biblioteca</a>
+        </li>
+        <li>
           <a href="dashboard/livros.html">Livros</a>
         </li>
         <li class="paginaAtual">
@@ -51,7 +54,7 @@
         <li>
           <a>
             <div class="botaoSair" onclick="limparSessao()">
-              <h3 style="color: #aa7744" class="h3BotaoSair">Sair</h3>
+              <img src="./../assets/imgs/exit.svg" class="" alt="">
             </div>
           </a>
         </li>
