--- a/public/dashboard/biblioteca.html
+++ b/public/dashboard/biblioteca.html
@@ -26,11 +26,11 @@
       <img src="../assets/imgs/logoExtendedCopy.png" alt="logo" class="logo" />
     </a>
     <ul class="navbar">
-      <li>
-        <a href="biblioteca.html">Biblioteca</a>
-      </li>
       <li class="paginaAtual">
-        <a class="paginaAtual" href="livros.html">Livros</a>
+        <a class="paginaAtual" href="biblioteca.html">Biblioteca</a>
+      </li>
+      <li>
+        <a href="livros.html">Livros</a>
       </li>
       <li>
         <a href="../bobia.html">recomendAI</a>
