--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -30,6 +30,9 @@
         </a>
           <ul class="navbar">
             <li>
+                <a href="biblioteca.html">Biblioteca</a>
+            </li>
+            <li>
               <a href="livros.html">Livros</a>
             </li>
             <li>
@@ -54,8 +57,8 @@
             <li>
               <a>
                 <div class="botaoSair" onclick="limparSessao()">
-                  <h3 style="color: #aa7744;" class="h3BotaoSair">Sair</h3>
-              </div>
+                    <img src="./../assets/imgs/exit.svg" class="" alt="">
+                </div>
               </a>
             </li>
           </ul>
