--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -32,6 +32,9 @@
     </a>
     <ul class="navbar">
       <li>
+        <a href="biblioteca.html">Biblioteca</a>
+      </li>
+      <li>
         <a href="livros.html">Livros</a>
       </li>
       <li>
@@ -51,11 +54,10 @@
           </div>
         </a>
       </li>
-      <li>|</li>
       <li>
         <a>
           <div class="botaoSair" onclick="limparSessao()">
-            <h3 style="color: #aa7744;" class="h3BotaoSair">Sair</h3>
+            <img src="./../assets/imgs/exit.svg" class="" alt="">
           </div>
         </a>
       </li>
