--- a/public/bobia.html
+++ b/public/bobia.html
@@ -25,7 +25,7 @@
       </a>
       <ul class="navbar">
         <li>
-          <a href="biblioteca.html">Biblioteca</a>
+          <a href="dashboard/biblioteca.html">Biblioteca</a>
         </li>
         <li>
           <a href="dashboard/livros.html">Livros</a>
