exibindo livros na tela livros e alterando alterando tabela usuarioLeu no BD

--- a/public/dashboard/livros.html
+++ b/public/dashboard/livros.html
@@ -327,7 +327,7 @@
   function atualizarLivros() {
     var fkUser = sessionStorage.ID_USUARIO;
 
-    fetch("/livro/listarLivros")
+    fetch("/livro/listarLivrosUsuario")
       .then(function (resposta) {
         if (resposta.ok) {
           if (resposta.status == 204) {
