--- a/public/dashboard/biblioteca.html
+++ b/public/dashboard/biblioteca.html
@@ -18,7 +18,7 @@
     href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
 </head>
-<!---->
+<!--onload="validarSessao(), atualizarLivros()"-->
 
 <body onload="validarSessao(), atualizarLivros()">
   <div class="header">
@@ -70,6 +70,8 @@
       </button>
     </div>
   </div>
+
+
 
   <div id="divCadastrarLivros" class="cadastrarLivros">
     <h2>Cadastre um novo livro</h2>
@@ -176,7 +178,44 @@
 </body>
 
 <script>
+  function livroLido(idLivro){
 
+    //if idLivro not in listaLivrosLidos:
+
+    var fkUser = sessionStorage.ID_USUARIO;
+    //  capturarLivrosLidos() ->
+
+    fetch("/livro/cadastrarLivroLido", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+
+        fkLivroServer: idLivro,
+        fkUserServer: fkUser,
+      }),
+    })
+      .then(function (resposta) {
+        console.log("resposta: ", resposta);
+
+        if (resposta.ok) {
+          capturarLivrosLidos();
+        } else {
+          throw "Houve um erro ao tentar realizar o cadastro do Forum!";
+        }
+      })
+      .catch(function (resposta) {
+        console.log(`#ERRO: ${resposta}`);
+      });
+    
+   }
+
+   function capturarLivrosLidos(){
+    alert('Funcionou porra')
+    // Rodar como onload no body
+    //Criar lista [] com o idLivro de todos os livros lidos pelo usuario
+   }
   function acessar(idLivro) {
     fetch(`/livro/exibirLivro/${idLivro}`, { cache: 'no-store' }).then(function (response) {
       if (response.ok) {
@@ -204,15 +243,16 @@
           <div class="containerHeaderLivro">
             <button onclick="fecharLivroExibido()">X</button>
             <h1>${dadosLivro.nome}</h1>
+            <div id="inputLivroLido"></div>
           </div>
           <div class="containerLivroEscolhido">
             <div class="imgLivroEscolhido">
               <div class="botoesSalvarLivro" style="background-image:url('${dadosLivro.fotoLivro}');background-size: cover;background-position: center; background-repeat: no-repeat; width:20vw; height:57vh;margin-bottom:13px;">
-                      <button class="botaoDesejo">
+                      <button onclick="livroLido(${idLivro})" class="botaoDesejo">
                         Lista de desejos
                         <img src="../assets/imgs/listaDesejo.svg" alt="">
                       </button> 
-                      <button class="botaoDesejo livroLido">
+                      <button onclick="listaDesejo(${idLivro})" class="botaoDesejo livroLido">
                         Livro Lido
                         <img src="../assets/imgs/livroLido.svg" alt="">
                       </button>
